# NSU_FIT_2nd_year_EVM_PU

./: README.md
lab1/: README.md  code.c.txt  lab1.doc  notes.txt
lab2/: README.md  code.c  lab2.docx  notes.txt  как сдать лабу.md
lab3/: lab3.doc  как сдать третью лабу (от меня).md  как сдать третью лабу (от меня).txt  как сдать третью лабу (от преподавателя).md  как сдать третью лабу (от преподавателя).txt  попытка в разбор -m32 -O0.doc
lab4/: ЮрьеваЮО_ВВЕДЕНИЕ_В_АРХИТЕКТУРУ_ARM.doc  разбор.docx
lab5/: CMakeLists.txt  README.md  lab5.docx  lab5.md  main.cpp  как сдать лабу.md
lab6/: лабораторная работа 6. отчет.docx
lab7/: lab7.docx  как сдать лабу.md
lab8/: README.md  lab8.docx  main.cpp
lab9/: lab9.docx
